src/objects/AssignedResource.object
<CustomObject>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceFrom__c</fullName>
        <label>Estimated Travel Distance From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceTo__c</fullName>
        <label>Estimated Travel Distance To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelTimeFrom__c</fullName>
        <label>Estimated Travel Time From (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>